<resources>
    <string name="app_name">Kisah Nabi App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_kisah_image">Kisah Image</string>
    <string name="txt_hero">Hero</string>
    <string name="txt_kisah">Kisah</string>
    <string name="txt_kisah_hero">Kisah %s</string>
    <string name="txt_search">Search...</string>
    <string name="txt_about">About</string>
    <string name="desc_me">Me</string>
    <string name="txt_my_name">Muhammad Yahdi Ilham Fahmi</string>
    <string name="txt_email">yahdi2702@gmail.com</string>
</resources>